2006-05-03  Funda Wang  <fundawang@linux.net.cn>

	* zh_CN.po: Updated Simplified Chinese translation.

2006-05-02 Marco Ciampa <ciampix@libero.it>

	* it.po: done some italian fixies

2006-05-01 Marco Ciampa <ciampix@libero.it>

	* it.po: updated italian translation

2006-04-29  Sven Neumann  <sven@gimp.org>

	* POTFILES.in: updated.

2006-04-28  Sven Neumann  <sven@gimp.org>

	* POTFILES.in: added app/pdb/gimppdb.c.

2006-04-28  Žygimantas Beručka  <zygis@gnome.org>

	* lt.po: Updated Lithuanian translation.

2006-04-17  Clytie Siddall <clytie@riverland.net.au>

	* vi.po: Updated Vietnamese translation.

2006-04-16  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gl.po: Updated Galician Translation.

2006-04-13  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

2006-04-11  Clytie Siddall <clytie@riverland.net.au>

	* vi.po: Updated Vietnamese translation.

2006-04-06  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gl.po: Updated Galician Translation.

2006-04-05  Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* ru.po: Updated Russian translation.

2006-04-05  Sven Neumann  <sven@gimp.org>

	* POTFILES.in: updated.

2006-04-05 Marco Ciampa <ciampix@libero.it>

	* it.po: updated italian translation

2006-04-03  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

2006-04-01 Marco Ciampa <ciampix@libero.it>

	* it.po: updated italian translation

2006-03-31  Sven Neumann  <sven@gimp.org>

	* POTFILES.in: removed app/dialogs/info-dialog.c

2006-03-29  Vladimer Sichinava  <vlsichinava@gmail.com>

        * ka.po: Added Georgian translation by
	  George Machitidze  <giomac@security.gov.ge>

2006-03-20  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

2006-03-14  Žygimantas Beručka  <zygis@gnome.org>

	* lt.po: Updated Lithuanian translation.

2006-03-12  Hendrik Brandt  <heb@gnome-de.org>

	* de.po: Updated German translation.
	