@@ -216,8 +216,11 @@ app/pdb/drawable_cmds.c
 app/pdb/drawable_transform_cmds.c
 app/pdb/edit_cmds.c
 app/pdb/gimp-pdb.c
+app/pdb/gimppdb-query.c
 app/pdb/gimppdb.c
+app/pdb/gimppluginprocedure.c
 app/pdb/gimpprocedure.c
+app/pdb/gimptemporaryprocedure.c
 app/pdb/guides_cmds.c
 app/pdb/image_cmds.c
 app/pdb/layer_cmds.c
@@ -232,7 +235,9 @@ app/pdb/vectors_cmds.c
 app/plug-in/gimpenvirontable.c
 app/plug-in/gimpinterpreterdb.c
 app/plug-in/gimppluginmanager.c
-app/plug-in/plug-in.c
+app/plug-in/gimppluginmanager-call.c
+app/plug-in/gimpplugin.c
+app/plug-in/plug-in-enums.c
 app/plug-in/plug-in-rc.c
 
 app/text/text-enums.c
