@@ -1,3 +1,7 @@
+2006-05-03  Michael Natterer  <mitch@gimp.org>
+
+	* POTFILES.in: updated.
+
 2006-05-03  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
